lib/src/bindings.dart


  late final _cpGrooveJointInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpGrooveJoint> Function(ffi.Pointer<cpGrooveJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpVect)>>('cpGrooveJointInit');
  late final _cpGrooveJointInit = _cpGrooveJointInitPtr.asFunction<ffi.Pointer<cpGrooveJoint> Function(ffi.Pointer<cpGrooveJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpVect)>();

  ffi.Pointer<cpConstraint> cpGrooveJointNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    cpVect groove_a,
    cpVect groove_b,
    cpVect anchorB,
  ) {
    return _cpGrooveJointNew(
      a,
      b,
      groove_a,
      groove_b,
      anchorB,
    );
  }

  late final _cpGrooveJointNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpVect)>>('cpGrooveJointNew');
  late final _cpGrooveJointNew = _cpGrooveJointNewPtr.asFunction<ffi.Pointer<cpConstraint> Function(ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpVect, cpVect, cpVect)>();

  cpVect cpGrooveJointGetGrooveA(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpGrooveJointGetGrooveA(
      constraint,
    );
  }

  late final _cpGrooveJointGetGrooveAPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpGrooveJointGetGrooveA');
  late final _cpGrooveJointGetGrooveA = _cpGrooveJointGetGrooveAPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpGrooveJointSetGrooveA(
    ffi.Pointer<cpConstraint> constraint,
    cpVect grooveA,
  ) {
    return _cpGrooveJointSetGrooveA(
      constraint,
      grooveA,
    );
  }

  late final _cpGrooveJointSetGrooveAPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpGrooveJointSetGrooveA');
  late final _cpGrooveJointSetGrooveA = _cpGrooveJointSetGrooveAPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  cpVect cpGrooveJointGetGrooveB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpGrooveJointGetGrooveB(
      constraint,
    );
  }

  late final _cpGrooveJointGetGrooveBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpGrooveJointGetGrooveB');
  late final _cpGrooveJointGetGrooveB = _cpGrooveJointGetGrooveBPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpGrooveJointSetGrooveB(
    ffi.Pointer<cpConstraint> constraint,
    cpVect grooveB,
  ) {
    return _cpGrooveJointSetGrooveB(
      constraint,
      grooveB,
    );
  }

  late final _cpGrooveJointSetGrooveBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpGrooveJointSetGrooveB');
  late final _cpGrooveJointSetGrooveB = _cpGrooveJointSetGrooveBPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  cpVect cpGrooveJointGetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpGrooveJointGetAnchorB(
      constraint,
    );
  }

  late final _cpGrooveJointGetAnchorBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpConstraint>)>>('cpGrooveJointGetAnchorB');
  late final _cpGrooveJointGetAnchorB = _cpGrooveJointGetAnchorBPtr.asFunction<cpVect Function(ffi.Pointer<cpConstraint>)>();

  void cpGrooveJointSetAnchorB(
    ffi.Pointer<cpConstraint> constraint,
    cpVect anchorB,
  ) {
    return _cpGrooveJointSetAnchorB(
      constraint,
      anchorB,
    );
  }

  late final _cpGrooveJointSetAnchorBPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpConstraint>, cpVect)>>('cpGrooveJointSetAnchorB');
  late final _cpGrooveJointSetAnchorB = _cpGrooveJointSetAnchorBPtr.asFunction<void Function(ffi.Pointer<cpConstraint>, cpVect)>();

  ffi.Pointer<cpPolyShape> cpPolyShapeAlloc() {
    return _cpPolyShapeAlloc();
  }

  late final _cpPolyShapeAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPolyShape> Function()>>('cpPolyShapeAlloc');
  late final _cpPolyShapeAlloc = _cpPolyShapeAllocPtr.asFunction<ffi.Pointer<cpPolyShape> Function()>();

  ffi.Pointer<cpPolyShape> cpPolyShapeInit(
    ffi.Pointer<cpPolyShape> poly,
    ffi.Pointer<cpBody> body,
    int count,
    ffi.Pointer<cpVect> verts,
    cpTransform transform,
    double radius,
  ) {
    return _cpPolyShapeInit(
      poly,
      body,
      count,
      verts,
      transform,
      radius,
    );
  }

  late final _cpPolyShapeInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, ffi.Int, ffi.Pointer<cpVect>, cpTransform, cpFloat)>>('cpPolyShapeInit');
  late final _cpPolyShapeInit = _cpPolyShapeInitPtr.asFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, int, ffi.Pointer<cpVect>, cpTransform, double)>();

  ffi.Pointer<cpPolyShape> cpPolyShapeInitRaw(
    ffi.Pointer<cpPolyShape> poly,
    ffi.Pointer<cpBody> body,
    int count,
    ffi.Pointer<cpVect> verts,
    double radius,
  ) {
    return _cpPolyShapeInitRaw(
      poly,
      body,
      count,
      verts,
      radius,
    );
  }

  late final _cpPolyShapeInitRawPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, ffi.Int, ffi.Pointer<cpVect>, cpFloat)>>('cpPolyShapeInitRaw');
  late final _cpPolyShapeInitRaw = _cpPolyShapeInitRawPtr.asFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, int, ffi.Pointer<cpVect>, double)>();

  ffi.Pointer<cpShape> cpPolyShapeNew(
    ffi.Pointer<cpBody> body,
    int count,
    ffi.Pointer<cpVect> verts,
    cpTransform transform,
    double radius,
  ) {
    return _cpPolyShapeNew(
      body,
      count,
      verts,
      transform,
      radius,
    );
  }

  late final _cpPolyShapeNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, ffi.Int, ffi.Pointer<cpVect>, cpTransform, cpFloat)>>('cpPolyShapeNew');
  late final _cpPolyShapeNew = _cpPolyShapeNewPtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, int, ffi.Pointer<cpVect>, cpTransform, double)>();

  ffi.Pointer<cpShape> cpPolyShapeNewRaw(
    ffi.Pointer<cpBody> body,
    int count,
    ffi.Pointer<cpVect> verts,
    double radius,
  ) {
    return _cpPolyShapeNewRaw(
      body,
      count,
      verts,
      radius,
    );
  }

  late final _cpPolyShapeNewRawPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, ffi.Int, ffi.Pointer<cpVect>, cpFloat)>>('cpPolyShapeNewRaw');
  late final _cpPolyShapeNewRaw = _cpPolyShapeNewRawPtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, int, ffi.Pointer<cpVect>, double)>();

  ffi.Pointer<cpPolyShape> cpBoxShapeInit(
    ffi.Pointer<cpPolyShape> poly,
    ffi.Pointer<cpBody> body,
    double width,
    double height,
    double radius,
  ) {
    return _cpBoxShapeInit(
      poly,
      body,
      width,
      height,
      radius,
    );
  }

  late final _cpBoxShapeInitPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, cpFloat, cpFloat, cpFloat)>>('cpBoxShapeInit');
  late final _cpBoxShapeInit = _cpBoxShapeInitPtr.asFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, double, double, double)>();

  ffi.Pointer<cpPolyShape> cpBoxShapeInit2(
    ffi.Pointer<cpPolyShape> poly,
    ffi.Pointer<cpBody> body,
    cpBB box,
    double radius,
  ) {
    return _cpBoxShapeInit2(
      poly,
      body,
      box,
      radius,
    );
  }

  late final _cpBoxShapeInit2Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, cpBB, cpFloat)>>('cpBoxShapeInit2');
  late final _cpBoxShapeInit2 = _cpBoxShapeInit2Ptr.asFunction<ffi.Pointer<cpPolyShape> Function(ffi.Pointer<cpPolyShape>, ffi.Pointer<cpBody>, cpBB, double)>();

  ffi.Pointer<cpShape> cpBoxShapeNew(
    ffi.Pointer<cpBody> body,
    double width,
    double height,
    double radius,
  ) {
    return _cpBoxShapeNew(
      body,
      width,
      height,
      radius,
    );
  }

  late final _cpBoxShapeNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpFloat, cpFloat, cpFloat)>>('cpBoxShapeNew');
  late final _cpBoxShapeNew = _cpBoxShapeNewPtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, double, double, double)>();

  ffi.Pointer<cpShape> cpBoxShapeNew2(
    ffi.Pointer<cpBody> body,
    cpBB box,
    double radius,
  ) {
    return _cpBoxShapeNew2(
      body,
      box,
      radius,
    );
  }

  late final _cpBoxShapeNew2Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpBB, cpFloat)>>('cpBoxShapeNew2');
  late final _cpBoxShapeNew2 = _cpBoxShapeNew2Ptr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpBB, double)>();

  int cpPolyShapeGetCount(
    ffi.Pointer<cpShape> shape,
  ) {
    return _cpPolyShapeGetCount(
      shape,
    );
  }

  late final _cpPolyShapeGetCountPtr = _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<cpShape>)>>('cpPolyShapeGetCount');
  late final _cpPolyShapeGetCount = _cpPolyShapeGetCountPtr.asFunction<int Function(ffi.Pointer<cpShape>)>();

  cpVect cpPolyShapeGetVert(
    ffi.Pointer<cpShape> shape,
    int index,
  ) {
    return _cpPolyShapeGetVert(
      shape,
      index,
    );
  }

  late final _cpPolyShapeGetVertPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpShape>, ffi.Int)>>('cpPolyShapeGetVert');
  late final _cpPolyShapeGetVert = _cpPolyShapeGetVertPtr.asFunction<cpVect Function(ffi.Pointer<cpShape>, int)>();

  double cpPolyShapeGetRadius(
    ffi.Pointer<cpShape> shape,
  ) {
    return _cpPolyShapeGetRadius(
      shape,
    );
  }

  late final _cpPolyShapeGetRadiusPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpShape>)>>('cpPolyShapeGetRadius');
  late final _cpPolyShapeGetRadius = _cpPolyShapeGetRadiusPtr.asFunction<double Function(ffi.Pointer<cpShape>)>();

  int cpConstraintIsRotaryLimitJoint(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsRotaryLimitJoint(
      constraint,
    );
  }

  late final _cpConstraintIsRotaryLimitJointPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsRotaryLimitJoint');
  late final _cpConstraintIsRotaryLimitJoint = _cpConstraintIsRotaryLimitJointPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpRotaryLimitJoint> cpRotaryLimitJointAlloc() {
    return _cpRotaryLimitJointAlloc();
  }

  late final _cpRotaryLimitJointAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpRotaryLimitJoint> Function()>>('cpRotaryLimitJointAlloc');
  late final _cpRotaryLimitJointAlloc = _cpRotaryLimitJointAllocPtr.asFunction<ffi.Pointer<cpRotaryLimitJoint> Function()>();

  ffi.Pointer<cpRotaryLimitJoint> cpRotaryLimitJointInit(
    ffi.Pointer<cpRotaryLimitJoint> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double min,
    double max,
  ) {
    return _cpRotaryLimitJointInit(
      joint,
      a,
      b,
      min,
      max,
    );
  }

  late final _cpRotaryLimitJointInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpRotaryLimitJoint> Function(ffi.Pointer<cpRotaryLimitJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpFloat, cpFloat)>>('cpRotaryLimitJointInit');
  late final _cpRotaryLimitJointInit =
      _cpRotaryLimitJointInitPtr.asFunction<ffi.Pointer<cpRotaryLimitJoint> Function(ffi.Pointer<cpRotaryLimitJoint>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, double, double)>();

  ffi.Pointer<cpConstraint> cpRotaryLimitJointNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double min,
    double max,
  ) {
    return _cpRotaryLimitJointNew(
      a,
      b,
      min,
      max,
    );
  }
